test/good/automatic/extension/class/without_input/ret_zero/0036.lat
class C {
	boolean fld;
}

C foo() {
  return new C;
}

C tester() {
	C c = foo();
	c.fld = true;
	return c;
}

int main() {
  if(tester().fld) {
      printString("OK");
  }
	return 0;
}
