test/bad/automatic/extension/class/compile_time/0014.lat
class andrzej {
  int andrzej;
}

int main() {
  andrzej return = new andrzej;
  return andrzej.andrzej;
}
